# series-tracker

./: LICENSE
backend/: pyproject.toml
backend/app/: db.sqlite3  pyproject.toml
backend/app/app/: settings.py  urls.py
backend/app/core/: admin.py  models.py  service_layer.py  validators.py  views.py
backend/app/core/migrations/: 0001_initial.py
backend/app/polls/: admin.py  service_layer.py  views.py
backend/app/tests/: test_add_and_delete_bookmark.py  test_register_user.py  test_series_list.py
backend/app/tests/factories/: factories.py
backend/app/validators/: validators.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: LoginForm.vue  RegistrationForm.vue  bookmarkCard.vue
frontend/src/pages/: bookmarksPage.vue
frontend/src/tests/: LoginForm.test.js  RegistrationForm.test.js
