[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["a-yermakova <106320233+a-yermakova@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
