[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Anastasia Yermakova <ertya0909@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
pydantic = "^2.4.2"
pytest = "^7.4.2"
pytest-django = "^4.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
